add a simple collision avoidance

--- a/scripts/mycode/2_perception/img_test.ipynb
+++ b/scripts/mycode/2_perception/img_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "72951e3b-a231-45f2-8c1a-401ec09b2d46",
    "metadata": {
     "tags": []
@@ -25,7 +25,7 @@
     "# pytesseract.pytesseract.tesseract_cmd = r\"C:\\Program Files\\Tesseract-OCR\\tesseract.exe\"\n",
     "\n",
     "# 读取图像\n",
-    "image = cv2.imread('test.png')\n",
+    "image = cv2.imread('test_0.png')\n",
     "\n",
     "# 图像预处理：将图像转换为灰度图\n",
     "gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
@@ -122,11 +122,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8af984b6-8e8a-43b9-ba2d-91d225a51ce8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'rotate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m angles \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m90\u001b[39m, \u001b[38;5;241m180\u001b[39m, \u001b[38;5;241m270\u001b[39m]\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m angle \u001b[38;5;129;01min\u001b[39;00m angles:\n\u001b[0;32m----> 5\u001b[0m     rotated_image \u001b[38;5;241m=\u001b[39m \u001b[43mimage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrotate\u001b[49m(angle, expand\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      6\u001b[0m     text \u001b[38;5;241m=\u001b[39m pytesseract\u001b[38;5;241m.\u001b[39mimage_to_string(rotated_image, config\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m--psm 10\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m text:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'rotate'"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image, ImageOps\n",
+    "import pytesseract\n",
+    "\n",
+    "# Load the image\n",
+    "image_path = '/mnt/data/image.png'\n",
+    "image = Image.open(image_path)\n",
+    "\n",
+    "# Ensure the image is in a format compatible with PIL\n",
+    "if not isinstance(image, Image.Image):\n",
+    "    image = Image.fromarray(image)\n",
+    "\n",
+    "# Rotate and detect text\n",
+    "rotated_text = None\n",
+    "rotation_angle = None\n",
+    "angles = [0, 90, 180, 270]\n",
+    "\n",
+    "for angle in angles:\n",
+    "    rotated_image = image.rotate(angle, expand=True)\n",
+    "    text = pytesseract.image_to_string(rotated_image, config='--psm 10').strip()\n",
+    "    if text:\n",
+    "        rotated_text = text\n",
+    "        rotation_angle = angle\n",
+    "        break\n",
+    "\n",
+    "# Process the extracted text\n",
+    "if rotated_text:\n",
+    "    letter = rotated_text.strip().upper()\n",
+    "else:\n",
+    "    letter = \"\"\n",
+    "\n",
+    "# Check for the circle\n",
+    "circle_present = \"O\" in letter or \"D\" in letter  # Example heuristic for circle detection\n",
+    "\n",
+    "# Assign color\n",
+    "color = \"Yellow\"\n",
+    "\n",
+    "# Output the result as JSON\n",
+    "result = {\n",
+    "    \"letter\": letter,\n",
+    "    \"circle\": circle_present,\n",
+    "    \"color\": color,\n",
+    "    \"rotation_angle\": rotation_angle\n",
+    "}\n",
+    "\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
