real world, until point cloud 2

--- a/scripts/mycode/2_perception/Perception_by_gpt-Copy1.ipynb
+++ b/scripts/mycode/2_perception/Perception_by_gpt-Copy1.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "2c575264-32a4-4fc0-9469-5ce80c9a98fe",
    "metadata": {
     "tags": []
@@ -103,50 +103,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
-      "[INFO] [1738469844.906425, 0.000000]: Waiting for data...\n",
-      "[INFO] [1738469845.153289, 38.060000]: Received image message.\n",
-      "[INFO] [1738469845.231921, 38.129000]: Received point cloud data.\n",
-      "[INFO] [1738469847.410021, 40.131000]: Color range - Min: [0.10196078 0.10196078 0.10196078], Max: [0.70196078 0.60784314 0.60784314]\n",
-      "[INFO] [1738469847.412506, 40.187000]: Requesting transform from world to left_camera_link_optical...\n",
-      "[INFO] [1738469847.414271, 40.187000]: Transform found: header: \n",
+      "[INFO] [1738600650.720977]: Waiting for data...\n",
+      "[INFO] [1738600650.803293]: Received image message.\n",
+      "[INFO] [1738600650.806390]: Received point cloud data.\n",
+      "[INFO] [1738600652.064903]: Color range - Min: [0.         0.00392157 0.        ], Max: [0.85882353 0.6745098  0.49803922]\n",
+      "[INFO] [1738600652.065866]: Requesting transform from world to zed2_left_camera_optical_frame...\n",
+      "[INFO] [1738600652.066746]: Transform found: header: \n",
       "  seq: 0\n",
       "  stamp: \n",
-      "    secs: 40\n",
-      "    nsecs: 184000000\n",
+      "    secs: 1738600652\n",
+      "    nsecs:  40070772\n",
       "  frame_id: \"world\"\n",
-      "child_frame_id: \"left_camera_link_optical\"\n",
+      "child_frame_id: \"zed2_left_camera_optical_frame\"\n",
       "transform: \n",
       "  translation: \n",
-      "    x: 0.20970870547940298\n",
-      "    y: -0.060016105412758605\n",
-      "    z: 0.5617650446281598\n",
+      "    x: 0.45038604299222773\n",
+      "    y: -0.10767117340281737\n",
+      "    z: 0.5459162793391138\n",
       "  rotation: \n",
-      "    x: 0.6588516827617362\n",
-      "    y: 0.6587818266372011\n",
-      "    z: 0.25680883481407174\n",
-      "    w: 0.256846622278784\n",
-      "[INFO] [1738469847.681952, 40.402000]: Transformed point cloud saved to /opt/ros_ws/src/franka_zed_gazebo/scripts/mycode/2_perception/mesh/zed_point_cloud_world3.ply\n",
-      "[INFO] [1738469847.848114, 40.540000]: Waiting for move_group action server...\n"
+      "    x: 0.6748700927956326\n",
+      "    y: 0.7272302761772079\n",
+      "    z: 0.07780729143882592\n",
+      "    w: 0.09814534456707605\n",
+      "[INFO] [1738600652.129600]: Transformed point cloud saved to /opt/ros_ws/src/franka_zed_gazebo/scripts/mycode/2_perception/mesh/zed_point_cloud_world3.ply\n",
+      "[INFO] [1738600652.146857]: Waiting for move_group action server...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[33m[ WARN] [1738469847.886295231]: Link zed2_holder has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n"
+      "[ERROR] [1738600652.153243]: Error initializing MoveRobot: Unable to connect to move_group action server 'move_group' within allotted time (5s)\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [1738469849.059709, 40.541000]: Constraints added: z > 0.01\n",
-      "[INFO] [1738469849.063531, 41.729000]: MoveRobot initialized successfully.\n",
-      "[INFO] [1738469849.086817, 41.796000]: Waiting for gripper action servers...\n",
-      "[INFO] [1738469849.374807, 42.061000]: Gripper action servers ready.\n"
+     "ename": "RuntimeError",
+     "evalue": "Unable to connect to move_group action server 'move_group' within allotted time (5s)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 16\u001b[0m\n\u001b[1;32m     12\u001b[0m point_cloud_saver\u001b[38;5;241m.\u001b[39msave_point_clouds(world_file)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mPickAndPlace\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PickAndPlace\n\u001b[0;32m---> 16\u001b[0m pick_place \u001b[38;5;241m=\u001b[39m \u001b[43mPickAndPlace\u001b[49m\u001b[43m(\u001b[49m\u001b[43mapproach_distance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/ros_ws/src/franka_zed_gazebo/scripts/mycode/3_move/PickAndPlace.py:11\u001b[0m, in \u001b[0;36mPickAndPlace.__init__\u001b[0;34m(self, approach_distance)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, approach_distance\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.3\u001b[39m):\n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrobot_mover \u001b[38;5;241m=\u001b[39m \u001b[43mMoveRobot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgripper \u001b[38;5;241m=\u001b[39m MyGripper()\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mapproach_distance \u001b[38;5;241m=\u001b[39m approach_distance\n",
+      "File \u001b[0;32m/opt/ros_ws/src/franka_zed_gazebo/scripts/mycode/3_move/mymove.py:25\u001b[0m, in \u001b[0;36mMoveRobot.__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrobot \u001b[38;5;241m=\u001b[39m moveit_commander\u001b[38;5;241m.\u001b[39mRobotCommander()\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgroup_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpanda_manipulator\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# 根据你的机器人调整\u001b[39;00m\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmove_group \u001b[38;5;241m=\u001b[39m \u001b[43mmoveit_commander\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMoveGroupCommander\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroup_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39madd_constraints()\n\u001b[1;32m     27\u001b[0m rospy\u001b[38;5;241m.\u001b[39mloginfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMoveRobot initialized successfully.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/ros/noetic/lib/python3/dist-packages/moveit_commander/move_group.py:66\u001b[0m, in \u001b[0;36mMoveGroupCommander.__init__\u001b[0;34m(self, name, robot_description, ns, wait_for_servers)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;28mself\u001b[39m, name, robot_description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrobot_description\u001b[39m\u001b[38;5;124m\"\u001b[39m, ns\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m, wait_for_servers\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5.0\u001b[39m\n\u001b[1;32m     64\u001b[0m ):\n\u001b[1;32m     65\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Specify the group name for which to construct this commander instance. Throws an exception if there is an initialization error.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 66\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_g \u001b[38;5;241m=\u001b[39m \u001b[43m_moveit_move_group_interface\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMoveGroupInterface\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     67\u001b[0m \u001b[43m        \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrobot_description\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwait_for_servers\u001b[49m\n\u001b[1;32m     68\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Unable to connect to move_group action server 'move_group' within allotted time (5s)"
      ]
     }
    ],
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2ebdb0eb-9e99-4745-88a8-52bfcc7225d1",
    "metadata": {
     "tags": []
@@ -230,8 +231,6 @@
     "    Returns:\n",
     "        o3d.geometry.PointCloud: 过滤后的点云对象。\n",
     "    \"\"\"\n",
-    "\n",
-    "\n",
     "    # 获取点云的点坐标\n",
     "    points = np.asarray(point_cloud.points)\n",
     "\n",
@@ -261,8 +260,10 @@
     "point_cloud = o3d.io.read_point_cloud(zed_ply_path)\n",
     "if not point_cloud.has_points():\n",
     "    raise ValueError(f\"Failed to read point cloud from {zed_ply_path}\")\n",
+    "o3d.visualization.draw_geometries([point_cloud, coordinate_frame], window_name=\"Filtered Point Cloud\")\n",
+    "    \n",
     "filtered_point_cloud = filter_point_cloud_by_depth_and_range(point_cloud, depth_threshold=0.005, range=[0.001, -0.8, 1, 1.6])\n",
-    "o3d.visualization.draw_geometries([filtered_point_cloud, coordinate_frame], window_name=\"Filtered Point Cloud\")\n"
+    "# o3d.visualization.draw_geometries([filtered_point_cloud, coordinate_frame], window_name=\"Filtered Point Cloud\")\n"
    ]
   },
   {
