--- a/scripts/mycode_clean/2_perception/Perception.ipynb
+++ b/scripts/mycode_clean/2_perception/Perception.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cb0fd4c1-97e3-4984-a270-edddc5a05230",
    "metadata": {
     "tags": []
@@ -40,30 +40,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2025-02-04 19:18:10,455 - topics - topicmanager initialized\n"
+      "INFO - 2025-02-24 17:24:27,269 - topics - topicmanager initialized\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [1738696690.742824, 0.000000]: Waiting for move_group action server...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m[ WARN] [1738696690.776106802]: Link zed2_holder has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [1738696692.075963, 0.000000]: MoveRobot initialized successfully.\n",
-      "[INFO] [1738696692.108600, 0.000000]: Waiting for gripper action servers...\n",
-      "[INFO] [1738696693.020319, 250.463000]: Gripper action servers ready.\n"
+      "[INFO] [1740417867.688820]: Waiting for move_group action server...\n",
+      "[INFO] [1740417868.993166]: Initial joint state saved: [0.019616137290004883, -0.7853518355298724, 0.04326445536076024, -2.6057015795543514, 0.035376283203279235, 1.815428719979267, 0.8240013238494677]\n",
+      "[INFO] [1740417868.994483]: MoveRobot initialized successfully.\n",
+      "[INFO] [1740417869.002878]: Waiting for gripper action servers...\n",
+      "[INFO] [1740417869.396440]: Gripper action servers ready.\n"
      ]
     }
    ],
@@ -99,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "2c575264-32a4-4fc0-9469-5ce80c9a98fe",
    "metadata": {
     "tags": []
@@ -109,29 +97,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] [1738696693.189771, 250.463000]: Waiting for data...\n",
-      "[INFO] [1738696694.161727, 251.549000]: Received image message.\n",
-      "[INFO] [1738696694.328224, 251.681000]: Received point cloud data.\n",
-      "[INFO] [1738696696.226164, 253.465000]: Color range - Min: [0.10196078 0.10196078 0.10196078], Max: [0.70588235 0.60784314 0.60784314]\n",
-      "[INFO] [1738696696.227612, 253.465000]: Requesting transform from world to left_camera_link_optical...\n",
-      "[INFO] [1738696696.228926, 253.465000]: Transform found: header: \n",
-      "  seq: 0\n",
-      "  stamp: \n",
-      "    secs: 253\n",
-      "    nsecs: 631000000\n",
-      "  frame_id: \"world\"\n",
-      "child_frame_id: \"left_camera_link_optical\"\n",
-      "transform: \n",
-      "  translation: \n",
-      "    x: 0.2097592918628224\n",
-      "    y: -0.059977553326671075\n",
-      "    z: 0.5616404884305867\n",
-      "  rotation: \n",
-      "    x: 0.6588366455241963\n",
-      "    y: 0.6589138459481626\n",
-      "    z: 0.25668657655283\n",
-      "    w: 0.256668696084687\n",
-      "[INFO] [1738696696.569442, 253.780000]: Transformed point cloud saved to /opt/ros_ws/src/franka_zed_gazebo/scripts/mycode_clean/2_perception/mesh/zed_point_cloud_world3.ply\n"
+      "[INFO] [1740419917.194461]: Waiting for data...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Save the point cloud\u001b[39;00m\n\u001b[1;32m     11\u001b[0m world_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/opt/ros_ws/src/franka_zed_gazebo/scripts/mycode_clean/2_perception/mesh/zed_point_cloud_world3.ply\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 12\u001b[0m \u001b[43mpoint_cloud_saver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave_point_clouds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworld_file\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/ros_ws/src/franka_zed_gazebo/scripts/mycode_clean/1_getPointCloud/save_point_cloud.py:61\u001b[0m, in \u001b[0;36mPointCloudSaver.save_point_clouds\u001b[0;34m(self, world_path)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21msave_point_clouds\u001b[39m(\u001b[38;5;28mself\u001b[39m, world_path):\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpoint_cloud_data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolor_image \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 61\u001b[0m         \u001b[43mrospy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;66;03m# Process the point cloud here, when saving\u001b[39;00m\n\u001b[1;32m     64\u001b[0m     point_list \u001b[38;5;241m=\u001b[39m pc2\u001b[38;5;241m.\u001b[39mread_points(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpoint_cloud_data, field_names\u001b[38;5;241m=\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mz\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrgb\u001b[39m\u001b[38;5;124m\"\u001b[39m), skip_nans\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m/opt/ros/noetic/lib/python3/dist-packages/rospy/timer.py:134\u001b[0m, in \u001b[0;36msleep\u001b[0;34m(duration)\u001b[0m\n\u001b[1;32m    132\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m    133\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 134\u001b[0m         \u001b[43mrospy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrostime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwallsleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mduration\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    135\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    136\u001b[0m     initial_rostime \u001b[38;5;241m=\u001b[39m rospy\u001b[38;5;241m.\u001b[39mrostime\u001b[38;5;241m.\u001b[39mget_rostime()\n",
+      "File \u001b[0;32m/opt/ros/noetic/lib/python3/dist-packages/rospy/rostime.py:277\u001b[0m, in \u001b[0;36mwallsleep\u001b[0;34m(duration)\u001b[0m\n\u001b[1;32m    275\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m    276\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 277\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mduration\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -152,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "2ebdb0eb-9e99-4745-88a8-52bfcc7225d1",
    "metadata": {
     "tags": []
@@ -163,7 +143,8 @@
     "import numpy as np\n",
     "from utils import filter_point_cloud_by_depth_and_range, filter_point_cloud_by_depth\n",
     "\n",
-    "zed_ply_path = \"mesh/zed_point_cloud_world3.ply\"\n",
+    "# zed_ply_path = \"mesh/zed_point_cloud_world3.ply\"\n",
+    "zed_ply_path = \"/opt/ros_ws/src/franka_zed_gazebo/scripts/mycode/2_perception/mesh/zed_point_cloud_world3.ply\"\n",
     "\n",
     "coordinate_frame = o3d.geometry.TriangleMesh.create_coordinate_frame(\n",
     "    size=0.1,  # Size of the coordinate axes, can be adjusted as needed\n",
