Integrated color detection into cube grasping pipeline
Added HSV-based color detection logic to identify blue, green, red, and yellow cubes.

Integrated detection after top-view image generation (cube_top_image) within pointcloud_process.

Printed the detected color for each cube during processing.

Ensured compatibility with grayscale input by converting it to BGR for color analysis.

Helps in associating grasp transforms with specific colored cubes for downstream tasks.

--- a/scripts/mycode_clean/2_perception/Perception.ipynb
+++ b/scripts/mycode_clean/2_perception/Perception.ipynb
@@ -1264,6 +1264,47 @@
     "            except Exception as e:\n",
     "                print(f\"警告: 无法生成顶部视图图像: {e}\")\n",
     "\n",
+    "            # --- Detecting color from top view image ---\n",
+    "            try:\n",
+    "            # Converting grayscale to BGR for consistency with color detection code\n",
+    "            cube_top_bgr = cv2.cvtColor(cube_top_image, cv2.COLOR_GRAY2BGR)\n",
+    "            hsv = cv2.cvtColor(cube_top_bgr, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "            # Defining HSV ranges\n",
+    "            color_ranges = {\n",
+    "                    'BLUE': ([140, 5, 50], [170, 30, 80]),\n",
+    "                    'GREEN': ([35, 150, 100], [93, 255, 220]),\n",
+    "                    'RED1': ([0, 100, 100], [10, 255, 255]),\n",
+    "                    'RED2': ([170, 100, 100], [180, 255, 255]),\n",
+    "                    'YELLOW': ([10, 100, 100], [35, 255, 255]),\n",
+    "                }\n",
+    "\n",
+    "                detected_colors = []\n",
+    "\n",
+    "                for color_name, (lower, upper) in color_ranges.items():\n",
+    "                    lower_np = np.array(lower)\n",
+    "                    upper_np = np.array(upper)\n",
+    "                    mask = cv2.inRange(hsv, lower_np, upper_np)\n",
+    "\n",
+    "                    if \"RED\" in color_name:\n",
+    "                        if color_name == \"RED1\":\n",
+    "                            red_mask = mask\n",
+    "                        else:\n",
+    "                            red_mask = cv2.bitwise_or(red_mask, mask)\n",
+    "                        if color_name == \"RED2\" and np.sum(red_mask) > 500:\n",
+    "                            detected_colors.append(\"RED\")\n",
+    "                    else:\n",
+    "                        if np.sum(mask) > 500:\n",
+    "                            detected_colors.append(color_name)\n",
+    "\n",
+    "                if detected_colors:\n",
+    "                    print(f\"Detected cube color: {detected_colors[0]}\")\n",
+    "                else:\n",
+    "                    print(\"No dominant color detected in top view.\")\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                print(f\"Color detection failed: {e}\")\n"
+    "\n",
     "            # 为碰撞检查生成抓取器网格\n",
     "            grasp_mesh, gripper_meshes_rotate = generate_gripper_from_transform(grasp_transform)\n",
     "\n",
