fixed invalid jason error

--- a/scripts/mycode_clean/2_perception/Perception.ipynb
+++ b/scripts/mycode_clean/2_perception/Perception.ipynb
@@ -1303,7 +1303,7 @@
     "                    print(\"No dominant color detected in top view.\")\n",
     "\n",
     "            except Exception as e:\n",
-    "                print(f\"Color detection failed: {e}\")\n"
+    "                print(f\"Color detection failed: {e}\")\n" ,
     "\n",
     "            # 为碰撞检查生成抓取器网格\n",
     "            grasp_mesh, gripper_meshes_rotate = generate_gripper_from_transform(grasp_transform)\n",
